--- a/meta-balena-common/recipes-containers/balena-supervisor/balena-supervisor/balena-supervisor.service
+++ b/meta-balena-common/recipes-containers/balena-supervisor/balena-supervisor/balena-supervisor.service
@@ -31,7 +31,7 @@ ExecStartPre=-@BINDIR@/balena stop resin_supervisor
 ExecStartPre=-@BINDIR@/balena stop balena_supervisor
 ExecStartPre=/bin/systemctl is-active balena.service
 ExecStart=/usr/bin/healthdog --healthcheck=/usr/lib/balena-supervisor/balena-supervisor-healthcheck @BINDIR@/start-balena-supervisor
-ExecStartPost=/usr/lib/balena-supervisor/balena-supervisor-set-scheduling-prio 5 rr 10
+ExecStartPost=/usr/lib/balena/set-scheduler-policies
 ExecStop=-@BINDIR@/balena stop balena_supervisor
 
 [Install]
