Increase the runtime priority of the Engine
This helps to keep the Engine responsive during periods of high-system
load. Specifically, we do two things here:

1. Set the Engine to run with a real-time scheduling policy; this makes
   it run with higher-priority from the perspective of the kernel
   process scheduler.
2. Set the Engine's cgroup `cpu.shares` to the maximum allowed value;
   this makes it run with higher-priority from the perspective of
   cgroups.

Signed-off-by: Leandro Motta Barros <leandro@balena.io>
Change-type: minor

--- a/meta-balena-common/conf/layer.conf
+++ b/meta-balena-common/conf/layer.conf
@@ -7,7 +7,9 @@ BBFILE_COLLECTIONS += "balena-common"
 BBFILE_PATTERN_balena-common := "^${LAYERDIR}/"
 BBFILE_PRIORITY_balena-common = "1337"
 
-LAYERSERIES_COMPAT_balena-common = "honister"
+# FIXME: Temporarily set back to dunfell, as it seems to be the version
+#        currently supported for the Pi family.
+LAYERSERIES_COMPAT_balena-common = "dunfell"
 
 BALENA_DEPRECATED_YOCTO_LAYER ?= "0"
 
