Run critical services in a high-priority slice

--- a/meta-balena-common/recipes-containers/balena-supervisor/balena-supervisor/balena-supervisor.service
+++ b/meta-balena-common/recipes-containers/balena-supervisor/balena-supervisor/balena-supervisor.service
@@ -23,7 +23,7 @@ Type=simple
 Restart=always
 RestartSec=10s
 WatchdogSec=180
-CPUShares=90000
+Slice=balena.slice
 SyslogIdentifier=balena-supervisor
 EnvironmentFile=/etc/balena-supervisor/supervisor.conf
 EnvironmentFile=-/tmp/update-supervisor.conf
