--- a/meta-balena-common/recipes-containers/balena/balena/balena.service
+++ b/meta-balena-common/recipes-containers/balena/balena/balena.service
@@ -31,7 +31,7 @@ Environment=BALENAD_EXTRA_ARGS=
 Environment="BALENA_DEVELOPMENT_ARGS="
 EnvironmentFile=-/var/volatile/development-features
 ExecStart=/usr/bin/healthdog --healthcheck=${BALENAD_HEALTHDOG_HEALTHCHECK} /usr/bin/balenad $BALENAD_EXPERIMENTAL $BALENAD_DEBUG $BALENAD_LOGDRIVER $BALENAD_STORAGEDRIVER $BALENAD_HOST $BALENAD_DATA_ROOT $BALENAD_DELTA_STORAGEDRIVER $BALENAD_DELTA_DATA_ROOT $BALENAD_EXEC_ROOT $BALENAD_PIDFILE $BALENAD_DNS $BALENAD_BIP $BALENAD_CIDR $BALENAD_IPTABLES $BALENAD_MAX_DL_ATTEMPTS $BALENAD_CGROUPDRIVER $BALENAD_EXTRA_ARGS $BALENA_DEVELOPMENT_ARGS
-ExecStartPost=-/usr/lib/balena/balena-set-prio 5
+ExecStartPost=-/usr/lib/balena/balena-set-prio
 #Adjust OOMscore to -900 to make killing unlikely
 OOMScoreAdjust=-900
 MountFlags=slave
@@ -39,7 +39,7 @@ LimitNOFILE=1048576
 LimitNPROC=1048576
 LimitCORE=infinity
 WatchdogSec=360
-CPUShares=262144
+Slice=balena.slice
 Restart=always
 KillMode=process
 
