Run user apps in lower-prio slice instead

--- a/meta-balena-common/recipes-containers/balena-supervisor/balena-supervisor/balena-supervisor.service
+++ b/meta-balena-common/recipes-containers/balena-supervisor/balena-supervisor/balena-supervisor.service
@@ -23,7 +23,7 @@ Type=simple
 Restart=always
 RestartSec=10s
 WatchdogSec=180
-Slice=balena.slice
+CPUShares=131072
 SyslogIdentifier=balena-supervisor
 EnvironmentFile=/etc/balena-supervisor/supervisor.conf
 EnvironmentFile=-/tmp/update-supervisor.conf
