--- a/meta-balena-common/recipes-containers/balena/balena/balena.service
+++ b/meta-balena-common/recipes-containers/balena/balena/balena.service
@@ -39,7 +39,7 @@ LimitNOFILE=1048576
 LimitNPROC=1048576
 LimitCORE=infinity
 WatchdogSec=360
-Slice=balena.slice
+CPUShares=262144
 Restart=always
 KillMode=process
 
