Run Engine and Supervisor on a high-priority slice

--- a/meta-balena-common/recipes-containers/balena-supervisor/balena-supervisor/balena-supervisor.service
+++ b/meta-balena-common/recipes-containers/balena-supervisor/balena-supervisor/balena-supervisor.service
@@ -25,6 +25,7 @@ Type=simple
 Restart=always
 RestartSec=10s
 WatchdogSec=180
+Slice=balena.slice
 SyslogIdentifier=balena-supervisor
 EnvironmentFile=/etc/balena-supervisor/supervisor.conf
 EnvironmentFile=-/tmp/update-supervisor.conf
