Add many more system services to balena.slice

--- a/meta-balena-common/recipes-connectivity/avahi/files/avahi-daemon.conf
+++ b/meta-balena-common/recipes-connectivity/avahi/files/avahi-daemon.conf
@@ -3,6 +3,7 @@ Requires=balena-hostname.service
 After=balena-hostname.service
 
 [Service]
+Slice=balena.slice
 ExecStart=
 ExecStart=/usr/sbin/avahi-daemon
 Restart=always
