--- a/meta-balena-common/recipes-connectivity/balena-proxy-config/balena-proxy-config/balena-proxy-config.service
+++ b/meta-balena-common/recipes-connectivity/balena-proxy-config/balena-proxy-config/balena-proxy-config.service
@@ -4,6 +4,7 @@ Requires=resin-boot.service
 After=resin-boot.service dnsmasq.service
 
 [Service]
+Slice=balena.slice
 Type=oneshot
 ExecStart=@BASE_BINDIR@/sh @BINDIR@/balena-proxy-config
 RemainAfterExit=yes
