--- a/meta-balena-common/recipes-connectivity/openssh/balena-files/sshd@.service
+++ b/meta-balena-common/recipes-connectivity/openssh/balena-files/sshd@.service
@@ -5,6 +5,7 @@ Requires=resin-state.service development-features.service os-sshkeys.service
 After=resin-state.service sshdgenkeys.service os-sshkeys.service development-features.service os-sshkeys.service
 
 [Service]
+Slice=balena.slice
 Environment="SSHD_OPTS="
 EnvironmentFile=-/etc/default/ssh
 EnvironmentFile=-/var/volatile/development-features
