--- a/meta-balena-common/recipes-core/balena-rollback/files/rollback-clear-bootcount.service
+++ b/meta-balena-common/recipes-core/balena-rollback/files/rollback-clear-bootcount.service
@@ -19,6 +19,7 @@ Before=umount.target
 Conflicts=umount.target
 
 [Service]
+Slice=balena.slice
 Type=oneshot
 RemainAfterExit=yes
 ExecStart=/bin/true
