--- a/meta-balena-common/recipes-containers/balena-supervisor/balena-supervisor/update-balena-supervisor.service
+++ b/meta-balena-common/recipes-containers/balena-supervisor/balena-supervisor/update-balena-supervisor.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=Balena supervisor updater
+# TODO: Do we need to use balena@.service here?
 Requires=\
     balena.service \
     bind-etc-balena-supervisor.service \
