--- a/meta-balena-common/recipes-containers/hostapp-extensions-update/files/update-hostapp-extensions.service
+++ b/meta-balena-common/recipes-containers/hostapp-extensions-update/files/update-hostapp-extensions.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=Hostapp extensions updater
+# TODO: Do we need to use balena@.service here?
 Requires=resin-data.service balena-data-reset.service balena.service
 After=resin-data.service balena-data-reset.service balena.service
 
