--- a/meta-balena-common/recipes-core/balena-rollback/files/rollback-altboot.service
+++ b/meta-balena-common/recipes-core/balena-rollback/files/rollback-altboot.service
@@ -16,6 +16,7 @@
 Description=Balena rollback checks altboot
 DefaultDependencies=no
 Requires=resin-boot.service
+# TODO: Do we need to use balena@.service here?
 Before=balena-host.service balena.service
 After=resin-boot.service systemd-udev-settle.service
 ConditionPathExists=/mnt/state/rollback-altboot-breadcrumb
